--- a/ObserverPattern/ObserverPattern/ObserverPattern.vcxproj.filters
+++ b/ObserverPattern/ObserverPattern/ObserverPattern.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Observer.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Observable.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
